removed wrong index entry

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2544,7 +2544,7 @@ global knowledge about OMS.}
   \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}\cbs  (user defined vocabularies)\cbe, 
 models \index{model} \cbs (interpretations of these)\cbe,
 sentences\index{sentence} \cbs (constraints on models)\cbe,
- and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence}.}
+ and a \termref{satisfaction relation} between models and sentences\index{sentence}.}
   \begin{note}
     Most OMS languages have an underlying logic.
   \end{note}
