--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -9320,7 +9320,7 @@ Approximation        = 'approx' , RemovalKind , [ InterfaceSignature ] , [ Logic
 
 Filtering            = 'filter' , RemovalKind , BasicOMS ;
 
-ExtensionOMS         = 'extension-oms' , [ ConservativityStrength ] , [ ExtensionName ] , 
+Extension         = 'extension' , [ ConservativityStrength ] , [ ExtensionName ] , 
                                        ExtendingOMS ;
 
 ConservativityStrength         = 'consequence-conservative' | 'model-conservative' | 'not-consequence-conservative' | 'not-model-conservative' | 'implied' | 'monomorphic' | 'weak-definitional' | 'definitional' ;
