--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4103,7 +4103,7 @@ subsequent \syntax{LibraryItem}s.
 At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs \cbs using CURIEs\cbe; see \cref{c:identifiers} for further details.
 
 \medskip
-\includegraphics[scale=0.6]{mof/dia/dia0.png}
+\includegraphics[width=\textwidth]{mof/Class_Diagram__libraries.png}
 
 
 
@@ -4162,7 +4162,7 @@ and the extending OMS of an\cbe{} \syntax{ExtensionOMS}) between the involved OM
 explicitly excluded.
 
 \medskip
-\includegraphics[scale=0.6]{mof/dia/dia1.png}
+\includegraphics[width=\textwidth]{mof/Class_Diagram__networks.png}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4232,7 +4232,9 @@ satisfiability (or a similar property) of the OMS is expressed.
 \cbe
 
 \medskip
-\includegraphics[scale=0.4]{mof/dia/dia2.png}
+\begin{center}
+\includegraphics[height=\textheight]{mof/Class_Diagram__oms.png}
+\end{center}
 
 An OMS definition \syntax{OMSDefinition} names an  OMS.  
 
@@ -4245,6 +4247,9 @@ requires satisfiability of the OMS, \syntax{'not-model-conservative'} its
 unsatisfiability.
 \syntax{'de\-fi\-nitional'} expresses \cbs that the OMS has a unique model\cbe; this may be interesting for characterizing
 OMS (e.g.\ returned by model finders) that are used to describe single models. 
+
+\medskip
+\includegraphics[width=\textwidth]{mof/Class_Diagram__oms-definition.png}
 
 A
 \syntax{SymbolItems}, used in an OMS \syntax{Reduction}, is a
@@ -4264,8 +4269,6 @@ can be either specified by its name, or be inferred as the \termref{default
 translation} to a given target (the source will be inferred as the 
 OMS language of the current OMS).
 
-\medskip
-\toleft\includegraphics[scale=0.6]{mof/dia/dia3.png}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4414,6 +4417,10 @@ either a named interpretation (\syntax{InterpretationDefinition}, \syntax{Entail
 \syntax{EquivalenceDefinition}), a named declaration of the  relation between a module of an OMS and the whole 
 OMS (\syntax{ModuleRelDefinition}), or a named \termref{alignment} (\syntax{AlignmentDefinition}).
 
+\begin{center}
+\includegraphics[height=\textheight]{mof/Class_Diagram__oms-mappings.png}
+\end{center}
+
 The \syntax{SymbolMap} in an interpretation always must lead to a signature morphism; a proof 
 obligation expressing that the (translated) source OMS logically follows from the target OMS is 
 generated.  An entailment is a variant where all symbols are mapped identically, while an 
@@ -4446,11 +4453,13 @@ With \syntax{AlignmentSemantics}, different styles of networks of aligned ontolo
 a logic-specific way) of alignments can be specified: whether a single domain is assumed, all domains are embedded into a global domain,
 or whether several local domains are linked (``contextualized'') by relations.
 
+\includegraphics[width=\textwidth]{mof/Class_Diagram__alignment.png}
+
 A \syntax{ModuleRelDefinition} declares that a certain OMS
 actually is a module of some other OMS with respect
 to the \syntax{InterfaceSignature}.
 
-\toleft\includegraphics[scale=0.4]{mof/dia/dia4.png}
+
 
 
 A symbol map in an interpretation is \required to cover all non-logical symbols of the source OMS; 
@@ -4595,9 +4604,8 @@ usually ending with \syntax{\#} or \syntax{/}. ({See annex~\ref{a:loc/id} for a 
 \end{description}
 
 \medskip
-\includegraphics[scale=0.6]{mof/dia/dia7.png}
+\includegraphics[width=\textwidth]{mof/Class_Diagram__prefixes.png}
 
-\includegraphics[scale=0.6]{mof/dia/dia8.png}
 
 
 %
