improvements of terms and definitions, made when improving the DOL ontology

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -859,7 +859,7 @@ Proposals shall provide a specification of a metalanguage for relationships betw
 of logically heterogeneous OMS, particularly, given a language translation from a language L1 to
 another language L2, the application of the language translation to an OMS that is written in the
 language L1. &
-\DOL provides the required translation construct using syntax \syntax{O with translation t}, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+\DOL provides the required translation construct using syntax \syntax{O with translation t}, see \ref{c:OMS} and \ref{a:dol-text:OMS}.
 Moreover, \DOL provides heterogeneous interpretations between OMS, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}. 
    \\ \hline
 %
@@ -867,14 +867,14 @@ Moreover, \DOL provides heterogeneous interpretations between OMS, see \ref{c:om
 Proposals shall provide a specification of a metalanguage for the union of OMS written in
 different languages, which implicitly involves the application of suitable default translations in
 order to reach a common target language. &
-The syntax for unions is \syntax{O1 and O2}, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}. Default translations are discussed in
-\ref{c:focused-OMS}, and \DOL's notion of heterogeneous logical
+The syntax for unions is \syntax{O1 and O2}, see \ref{c:OMS} and \ref{a:dol-text:OMS}. Default translations are discussed in
+\ref{c:OMS}, and \DOL's notion of heterogeneous logical
 environment explicitly specifies default translations, see \ref{c:direct-sematics}.
 	\\ \hline
 %
 6.5.1(c) & 
 Proposals shall provide a specification of a metalanguage for importation in modular OMS.	&
-\DOL allows the import of OMS by their IRI, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+\DOL allows the import of OMS by their IRI, see \ref{c:OMS} and \ref{a:dol-text:OMS}.
 	\\  \hline
 %
 6.5.1(d) & 
@@ -887,7 +887,7 @@ extracted modules e.g. the whole theory is a conservative extension of the modul
 Proposals shall provide a specification of a metalanguage for relationships between OMS and their
 approximation in less expressive languages such that the approximation is logically implied by the
 original theory, where the approximation generally has to be maximal in some suitable sense. 	&
-\DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.	\\ \hline
+\DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:OMS} and \ref{a:dol-text:OMS}.	\\ \hline
 %
 6.5.1(f) & 
 Proposals shall provide a specification of a metalanguage for links such as imports,
@@ -898,7 +898,7 @@ interpretations, refinements, and alignments between OMS/modules.
 %
 6.5.1(g) & 
 Proposals shall provide a specification of a metalanguage for combination of OMS along links. 	&
-\DOL provides such a construct with syntax \syntax{combine n}, where \syntax{n} is a network of OMS and mappings (links),  see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+\DOL provides such a construct with syntax \syntax{combine n}, where \syntax{n} is a network of OMS and mappings (links),  see \ref{c:OMS} and \ref{a:dol-text:OMS}.
 	\\ \hline
 %
 6.5.2(a)& 
@@ -919,7 +919,7 @@ The metalanguage shall not replace the object language constructs of the conform
 languages.	&
 The syntax of a \syntax{NativeDocument} is left unspecified in this standard. Rather, here this standard relies on other
 standards and language definitions.
-See \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+See \ref{c:OMS} and \ref{a:dol-text:OMS}.
    \\ \hline
 %
 6.5.2(d)& 
@@ -927,7 +927,7 @@ The metalanguage shall provide syntactic constructs for (i) structuring OMS rega
 logic in which their sentences are formalized and (ii) basic and structured OMS and facilities to
 identify them in a globally unique way.
 	&
-The structuring constructs for OMS in \ref{c:focused-OMS} and \ref{a:dol-text:OMS} can be used for 
+The structuring constructs for OMS in \ref{c:OMS} and \ref{a:dol-text:OMS} can be used for 
 any logic, see the semantics in \ref{c:direct-sematics}. \DOL uses IRIs for referencing both basic and structured OMS, see
 \ref{c:iris}.
    \\ \hline
@@ -1049,7 +1049,7 @@ Proposals may provide constructs for non-monotonic logics. 	&
 Currently, only monotonic logics are supported.
 However, \DOL provides a circumscription-like non-monotonic
 structuring construct with syntax \syntax{o1 then \%minimize o2},
-see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+see \ref{c:OMS} and \ref{a:dol-text:OMS}.
    \\ \hline
 %
 6.6.3 & 
@@ -1713,7 +1713,7 @@ For the purposes of this document, the following terms and definitions apply.
 
 \begin{definitions}
   \termdefinitionLight{Distributed Ontology, Model and Specification Language\synonym
-  \DOL}\index{\dolindex ! definition}{language for formalizing {libraries}\index{library} of \termref{OMS} and OMS networks\index{OMS network}, 
+  \DOL}\index{\dolindex ! definition}{\cbs unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and models, using \cbe{} \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
   whose syntax and semantics are specified in this \IS{}.}
 %
 % \begin{note}
@@ -1843,7 +1843,7 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
 \termdefinition{model}{semantic interpretation of all non-logical symbols\index{non-logical symbol} of a \termref{signature}.}
   \begin{note}
     A model of an OMS is a model of the signature of the OMS
-    that\cbs also\cbe satisfies all the axioms\index{axiom} of the OMS.
+    that\cbs also\cbe satisfies all the \cbs{} additional constraints expressed by the OMS. In case of \termref{flattenable} OMS, these constraints are expressed by the axioms of the OMS.\cbe
   \end{note}
   \begin{note}
   This term refers to \emph{model} in the sense of model theory (a
@@ -4186,7 +4186,7 @@ Id                     = Letter , { LetterOrDigit } ;
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\sclause{OMS}\label{c:focused-OMS}
+\sclause{OMS}\label{c:OMS}
 \ssclause{Abstract Syntax}
 
 An OMS (\syntax{OMS}) can be one of the following:
