--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2248,7 +2248,7 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
 \cbs
 
 \termdefinitionLight{\termref{minimization}} {form of closure that restricts the models to those that are minimal (with respect to the local environment).}
-\termdefinitionLight{\termref{minimization}} {form of closure that restricts the models to those that are maximal (with respect to the local environment).}
+\termdefinitionLight{\termref{maximization}} {form of closure that restricts the models to those that are maximal (with respect to the local environment).}
 
 
 
