--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7687,10 +7687,12 @@ on $N_{DT} \cup \{ \textit{rdfs:Literal} \}$,
 \item a map $\sigma_{LT}\colon V_{LT}\to V'_{LT}$ 
 
 \end{itemize}
-\item
-\item
-\item
-\item
+\item The sentences for a signature are definded as in
+the direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}. Sentence translation is substitution of symbols.
+\item  $(D,V)$-models are interpretations for $D$ and $V$. 
+$(D,V)$-model morphisms are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. Model reducts are built by first translating along the signature morphism and then
+looking up the interpretation in the model to be reduced.  
+\item The satisfaction relation is defined as in direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}.
 \end{itemize}
 \qed\end{definition}
 
